syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "UrlShortener.Shared.Protos";

package user;

message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
  string role = 6;
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phoneNumber = 4;
  string role = 5;
  string password = 6;
}

message GetUserRequest {
  string id = 1;
}

message GetAllUsersRequest {
  google.protobuf.StringValue id = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message GetAllUsersResponse {
  repeated User users = 1;
  int32 totalCount = 2;
}

message UpdateUserRequest {
  string id = 1;
  google.protobuf.StringValue firstName = 2;
  google.protobuf.StringValue lastName = 3;
  google.protobuf.StringValue phoneNumber = 4;
  google.protobuf.StringValue role = 5;
  google.protobuf.StringValue email = 6;
  google.protobuf.StringValue password = 7;
}

message DeleteUserRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UserWithCredentials {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
  string role = 6;
  string passwordHash = 7;
  string passwordSalt = 8;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }

  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {
    option (google.api.http) = {
      get: "/users"
    };
  }

  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/users"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/users"
    };
  }

  // Internal endpoint for Auth service - returns user with password credentials
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserWithCredentials) {
    option (google.api.http) = {
      get: "/users/by-email/{email}"
    };
  }
}