syntax = "proto3";
package urlshortener.user;

option csharp_namespace = "UrlShortener.UsersService.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// Messages
message User {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
  string role = 6;
  google.protobuf.Timestamp createdAt = 7;
}

message CreateUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phoneNumber = 4;
  string role = 5;
  string password = 6;
  string confirmPassword = 7;
}

message GetUserRequest {
  string id = 1;
}

message GetAllUsersRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message GetAllUsersResponse {
  repeated User users = 1;
  int32 totalCount = 2;
}

message UpdateUserRequest {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string phoneNumber = 4;
  string role = 5;
  string password = 6;
}

message DeleteUserRequest {
  string id = 1;
}

message AuthenticateRequest {
  string email = 1;
  string password = 2;
}

message AuthenticateResponse {
  User user = 1;
}

// Service with HTTP bindings for JSON transcoding + swagger generation
service UserService {
  // POST /v1/users
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  // GET /v1/users/{id}
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }

  // GET /v1/users?page=1&pageSize=20
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

  // PUT /v1/users/{id}
  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      put: "/v1/users/{id}"
      body: "*"
    };
  }

  // DELETE /v1/users/{id}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/users/{id}"
    };
  }

  // POST /v1/users:authenticate
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {
    option (google.api.http) = {
      post: "/v1/users:authenticate"
      body: "*"
    };
  }
}